Added new test case

--- a/test-output/old/OsintMon Suite/Test.properties
+++ b/test-output/old/OsintMon Suite/Test.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=VerifyTitle][SuiteResult context=Test]
+[SuiteResult context=VerifyTitle][SuiteResult context=NoCredentials][SuiteResult context=InvalidCredentials][SuiteResult context=Test]
