--- a/test-output/old/OsintMon Suite/NoCredentials.properties
+++ b/test-output/old/OsintMon Suite/NoCredentials.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=VerifyTitle][SuiteResult context=NoCredentials]
+[SuiteResult context=VerifyTitle][SuiteResult context=NoCredentials][SuiteResult context=ValidLogin]
